<resources>
    <string name="app_name">TTSNotifier</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_device">Device settings</string>
    <string name="pref_header_quiet_time">Quiet Time</string>
    <string name="pref_header_others">Others</string>
    <string name="pref_header_tts">TTS Settings</string>
    <string name="service_running">TTSN service is running</string>
    <string name="service_suspended">TTSN service is suspended</string>
    <string name="service_disabled">TTSN service is disabled</string>
    <string name="status_summary_notification_access_enabled">
        Open the Android notification access settings to disable TTSN</string>
    <string name="status_summary_notification_access_disabled">
        Open the Android notification access settings to enable TTSN</string>
    <string name="status_summary_suspended">Select to activate TTSN.</string>
    <string name="app_list">App List</string>
    <string name="app_list_summary">List installed apps which can be ignored.</string>
    <string name="app_is_ignored">%s is ignored</string>
    <string name="app_is_not_ignored">%s is not ignored</string>
    <string name="ignore_all">Ignore All</string>
    <string name="ignore_none">Ignore None</string>
    <string name="filter">Filter</string>
    <string name="notification_from">Notification from %s.</string>
    <string name="error_tts_init">Error: Could not initialize TTS!</string>
    <string name="yes">Yes</string>
    <string name="ignore_app">Ignore %s?</string>
    <string name="unignore_app">Unignore %s?</string>
    <string name="reason_app">Ignored app</string>
    <string name="reason_string">Ignored text</string>
    <string name="reason_empty_msg">Empty message</string>
    <string name="reason_identical">Identical message within {0,choice,-1#infinite seconds|1#{0} second|1&lt;{0} seconds}</string>
    <string name="reason_quiet">Quiet time</string>
    <string name="reason_silent">Silent or vibrate mode</string>
    <string name="reason_call">Active or ringing call</string>
    <string name="reason_screen_off">Screen off</string>
    <string name="reason_screen_on">Screen on</string>
    <string name="reason_headset_off">Headset off</string>
    <string name="reason_headset_on">Headset on</string>
    <string name="reason_shake">Silenced by shake</string>
    <string name="reason_suspended">VN suspended by widget</string>
    <string name="tts_settings">TTS Settings</string>
    <string name="tts_settings_summary">Open the Android Text-To-Speech settings.</string>
    <string name="tts_settings_summary_fail">Unable to find TTS settings! If it exists on your device (it should), please contact the developer.</string>
    <string name="tts_message">TTS Message</string>
    <string name="tts_message_summary">Customize how Text-To-Speech says notifications.</string>
    <string name="tts_message_dialog">#a = App title\n#t = Ticker\n#s = Subtext\n#c = Content title\n#m = Content message\n#i = Content info\n\nDefault:\n#a. #c. #m.</string>
    <string name="tts_stream">TTS Audio Stream</string>
    <string name="tts_stream_summary">Choose the audio stream that Text-To-Speech plays through.</string>
    <string name="tts_delay">TTS Delay</string>
    <string name="tts_delay_summary">Delay TTS a set number of seconds after notification.</string>
    <string name="tts_delay_dialog_msg">Number of seconds to wait after notification before speaking.</string>
    <string name="tts_repeat">TTS Repeat</string>
    <string name="tts_repeat_summary">Continually repeat notifications over TTS until screen turns on.</string>
    <string name="tts_repeat_dialog_msg">Notifications are repeated at the defined interval until the screen is turned on. Notifications created while the screen is on are not repeated.\n\nValue is in minutes. Blank or 0 to disable.</string>
    <string name="tts_message_reset_default">TTS Message setting updated to new default value</string>
    <string name="ttsString_default_value">#a. #c. #m.</string>
    <string-array name="stream_value">
        <item>3</item>
        <item>5</item>
        <item>0</item>
        <item>2</item>
        <item>4</item>
    </string-array>
    <string name="shake_to_silence">Shake-To-Silence</string>
    <string name="shake_to_silence_summary">Adjust the sensitivity threshold of Shake-To-Silence.</string>
    <string name="shake_to_silence_dialog_msg">Lower values are more sensitive.\n\nDefault: 100\nBlank to disable.</string>
    <string-array name="stream_name">
        <item>Media</item>
        <item>Notification</item>
        <item>Voice</item>
        <item>Ring</item>
        <item>Alarm</item>
    </string-array>
    <string name="ignore_strings">Ignore Text</string>
    <string name="ignore_strings_summary">Ignore notifications that contain certain text in the message.</string>
    <string name="ignore_empty">Ignore Empty</string>
    <string name="ignore_empty_summary_on">Notifications without a message will not be spoken.</string>
    <string name="ignore_empty_summary_off">Notifications without a message will be spoken as \"Notification from [app name].\"</string>
    <string name="ignore_strings_dialog_msg">Separate individual entries with a new line.</string>
    <string name="device_state">Device States</string>
    <string name="device_state_summary">Select whether to speak during certain device states.</string>
    <string name="device_state_dialog_title">Speak during these device states</string>
    <string-array name="device_states">
        <item>Screen Off</item>
        <item>Screen On</item>
        <item>Headset Off</item>
        <item>Headset On</item>
        <item>Silent/Vibrate</item>
    </string-array>
    <string name="ignore_repeat">Ignore Repeats</string>
    <string name="ignore_repeat_summary">Ignore subsequent identical notifications within a set time.</string>
    <string name="ignore_repeat_dialog_msg">Set number of seconds that must pass since last notification before a repeat can be spoken.\nIgnored repeats reset the count and different notifications clear it.\nBlank = infinite.</string>
    <string name="max_length">Maximum Message"</string>
    <string name="max_length_summary">Maximum message length to speak, larger messages will be truncated.</string>
    <string name="max_length_dialog_msg">Maximum message length to speak, larger messages will be truncated.</string>
    <string name="quiet_start">Quiet Time Start</string>
    <string name="quiet_start_summary">Don\'t speak after this time.\nLeave the same as end to disable.</string>
    <string name="quiet_end">Quiet Time End</string>
    <string name="quiet_end_summary">Don\'t speak before this time.\nLeave the same as start to disable.</string>
    <string name="support_summary">Donate, rate/comment, translations, source code, or contact the developer.</string>
    <string name="audio_focus">Pause/dim media</string>
    <string name="audio_focus_summary">Request other media to pause/dim when speaking</string>
    <string name="notify_log">Notification Log</string>
    <string name="notify_log_summary">List last 20 notifications. Displays time, app name, message, and ignore reasons.</string>
    <string name="support">Support Voice Notify</string>
    <string name="donate">Donate</string>
    <string-array name="support_items">
        <item>@string/donate</item>
        <item>Rate/Comment</item>
        <item>Contact Developer</item>
        <item>Translations</item>
        <item>Source Code</item>
    </string-array>
    <string name="donate_wallet_title">Donate - Google Wallet</string>
    <string name="donate_wallet_message">If you are in the United States and would like to donate via Google Wallet, simply use the Send Money feature and address it to pilota51@gmail.com.\nUnfortunately, Send Money is not available outside the US.\n\nThank you for using and supporting Voice Notify!</string>
    <string name="donate_wallet_launch_app">Launch Wallet App</string>
    <string name="donate_wallet_launch_web">Open Wallet Website</string>
    <string name="error_market">Error: Unable to find Google Play Store installed.</string>
    <string name="error_email">Error: Unable to find an installed email app.</string>
    <string name="dev_email">pilota51@gmail.com</string>
    <string name="email_subject">Contacting about Voice Notify</string>
    <string name="email_body">\n\nVN version: %1$s\nAndroid version: %2$s\nAndroid build number: %3$s\nDevice: %4$s\n</string>
    <string-array name="donate_services">
        <item>Google Wallet</item>
        <item>PayPal</item>
    </string-array>
    <string name="test">Test</string>
    <string name="test_summary">Post a notification (delayed 5 seconds) to test current settings.</string>
    <string name="test_ignored">Voice Notify is ignored in App List.\nTest will run, but notification will not be spoken.</string>
    <string name="test_ticker">This is the ticker message</string>
    <string name="test_subtext">The Subtext</string>
    <string name="test_content_title">Content Title</string>
    <string name="test_content_text">This is the content message.</string>
    <string name="test_content_info">Content Info</string>
    <string name="notification_channel_desc">Used for test notification</string>
</resources>