<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/key_ttsSettings"
        android:title="@string/tts_settings"
        android:summary="@string/tts_settings_summary" />
    <EditTextPreference
        android:key="@string/key_ttsString"
        android:title="@string/tts_message"
        android:summary="@string/tts_message_summary"
        android:dialogMessage="@string/tts_message_dialog"
        android:defaultValue="@string/ttsString_default_value" />
    <ListPreference
        android:key="@string/key_ttsStream"
        android:title="@string/tts_stream"
        android:summary="@string/tts_stream_summary"
        android:entries="@array/stream_name"
        android:entryValues="@array/stream_value"
        android:defaultValue="3" />
    <EditTextPreference
        android:key="@string/key_ttsDelay"
        android:title="@string/tts_delay"
        android:summary="@string/tts_delay_summary"
        android:dialogMessage="@string/tts_delay_dialog_msg"
        android:digits="0123456789"
        android:inputType="number" />
    <EditTextPreference
        android:key="@string/key_tts_repeat"
        android:title="@string/tts_repeat"
        android:summary="@string/tts_repeat_summary"
        android:dialogMessage="@string/tts_repeat_dialog_msg"
        android:digits="0123456789"
        android:inputType="number" />

</PreferenceScreen>
