<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <CheckBoxPreference
        android:key="@string/key_audio_focus"
        android:title="@string/audio_focus"
        android:summary="@string/audio_focus_summary"
        android:defaultValue="true" />
    <EditTextPreference
        android:key="@string/key_shake_threshold"
        android:title="@string/shake_to_silence"
        android:summary="@string/shake_to_silence_summary"
        android:dialogMessage="@string/shake_to_silence_dialog_msg"
        android:digits="0123456789"
        android:inputType="number"
        android:defaultValue="100" />
    <EditTextPreference
        android:key="@string/key_ignore_strings"
        android:title="@string/ignore_strings"
        android:summary="@string/ignore_strings_summary"
        android:dialogMessage="@string/ignore_strings_dialog_msg" />
    <CheckBoxPreference
        android:key="@string/key_ignore_empty"
        android:title="@string/ignore_empty"
        android:summaryOn="@string/ignore_empty_summary_on"
        android:summaryOff="@string/ignore_empty_summary_off"
        android:defaultValue="true" />
    <EditTextPreference
        android:key="@string/key_ignore_repeat"
        android:title="@string/ignore_repeat"
        android:summary="@string/ignore_repeat_summary"
        android:dialogMessage="@string/ignore_repeat_dialog_msg"
        android:digits="0123456789"
        android:inputType="number"
        android:defaultValue="10" />

</PreferenceScreen>
